# gfxindex

./: AUTHORS  ChangeLog  GFXIndex.c  GFXIndex.c.info  GFXIndex.info  GFXIndex.lnk  GFXIndex.map  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  anytopnm  config.h  config.h.in  configure  configure.in  gfxindex.c  gfxindex.nsi.in  gfxindex.php3  gfxindex.spec  gfxindex.spec.in  makethumbs  sources.txt  winbuild
attic/: README
attic/Amiga/: GFXIndex  GFXIndex.c  GFXIndex.txt
attic/Linux/: README  anytopnm  gfxindex  gfxindex.c  makethumbs
debian/: changelog  conffiles.ex  control  copyright  docs  files  gfxindex-default.ex  gfxindex.doc-base  gfxindex.postinst.debhelper  gfxindex.prerm.debhelper  gfxindex.substvars  info  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch
docs/: README.html  gfxindex.1  win32-swe.txt
extras/: GFXIndex.c  gfxindex.php  gfxindex.php3  index.php  sample.css
src/: Makefile.am  Makefile.in  args.c  args.h  confargs.c  confargs.h  defaults.h  exif.c  exif.h  gfx_types.h  gfxindex.c  global.h  preferences.c  preferences.h  resource.rc.in  thumbdata.c  thumbdata.h  util.c  util.h  win32.c  win32.h  xml.c  xml.h
src/libgfx/: Makefile.am  Makefile.in  amigaglib.c  amigaglib.c.info  amigaglib.h  amigaglib.h.info  exif.c  exif.h  gd_rescale.h  gfx.c  gfx.c.info  gfx.h  gfx.h.info  gfx_scale_fine.h  gfxio.c  gfxio.h  io_dcraw.c  io_dcraw.h  io_jpeg.c  io_jpeg.h  io_png.c  io_png.h  libdcraw.c  libdcraw.h
src/libtaglist/: Makefile.am  Makefile.in  README  pack.h  taglist.c  taglist.h  taglist.txt
