AC_INIT(src/gfxindex.c)
AM_CONFIG_HEADER(config.h)

VERSION=1.3
AC_SUBST(VERSION)

PACKAGE=gfxindex
AC_SUBST(PACKAGE)

AC_PREFIX_DEFAULT(/usr/local)

AM_INIT_AUTOMAKE($PACKAGE, "$VERSION")

AM_PATH_GLIB( "1.2.0" )

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_STDC_HEADERS
AC_ARG_PROGRAM

if eval "test x$GCC = xyes"; then
  if eval "! echo $CFLAGS | grep \\-Wall" > /dev/null 2> /dev/null; then
    CFLAGS="$CFLAGS -Wall"
  fi

  if eval "test x$enable_ansi = xyes"; then
    if eval "! echo $CFLAGS | grep \\-ansi" > /dev/null 2> /dev/null; then
      CFLAGS="$CFLAGS -ansi"
    fi

    if eval "! echo $CFLAGS | grep \\-pedantic" > /dev/null 2> /dev/null; then
      CFLAGS="$CFLAGS -pedantic"
    fi
  fi
fi

AC_CHECK_LIB(popt, poptGetContext, LIBS="$LIBS -lpopt", AC_MSG_ERROR("Missing required popt library!"))
AC_CHECK_LIB(jpeg, jpeg_start_decompress,,AC_MSG_WARN("Missing JPEG library. JPEG I/O will not be supported."))

AC_ARG_ENABLE( debug, [  --enable-debug           Produce debugging information], CFLAGS="$CFLAGS -g" )

CFLAGS="$CFLAGS $GLIB_CFLAGS"
LIBS="$LIBS $LDFLAGS $GLIB_LIBS"

AC_SUBST(CFLAGS)
AC_SUBST(LIBS)

AC_OUTPUT([
Makefile
src/Makefile
src/libtaglist/Makefile
src/libgfx/Makefile
gfxindex.spec
])
