AC_INIT(src/gfxindex.c)
AM_CONFIG_HEADER(config.h)

VERSION=2.0pre3
AC_SUBST(VERSION)

PACKAGE=gfxindex
AC_SUBST(PACKAGE)

AC_PREFIX_DEFAULT(/usr/local)

AM_INIT_AUTOMAKE($PACKAGE, "$VERSION")

#AM_PATH_GLIB( "1.2.0" )


AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_STDC_HEADERS
#AC_ARG_PROGRAM
AM_MAINTAINER_MODE



if eval "test x$GCC = xyes"; then
  if eval "! echo $CFLAGS | grep \\-Wall" > /dev/null 2> /dev/null; then
    CFLAGS="$CFLAGS -Wall"
  fi

  if eval "test x$enable_ansi = xyes"; then
    if eval "! echo $CFLAGS | grep \\-ansi" > /dev/null 2> /dev/null; then
      CFLAGS="$CFLAGS -ansi"
    fi

    if eval "! echo $CFLAGS | grep \\-pedantic" > /dev/null 2> /dev/null; then
      CFLAGS="$CFLAGS -pedantic"
    fi
  fi
fi

AC_CHECK_LIB(popt, poptGetContext, , AC_MSG_ERROR([Missing required popt library!]))
AC_CHECK_LIB(jpeg, jpeg_start_decompress, ,AC_MSG_WARN([Missing JPEG library. JPEG I/O will not be supported.]))
AC_CHECK_LIB(png, png_read_png, ,AC_MSG_WARN([Missing PNG library. PNG I/O will not be supported.]))
AC_CHECK_LIB(expat, XML_ParserCreate, , AC_MSG_ERROR([Missing expat library. Needed for XML parsing]))

PKG_CHECK_MODULES(EXIF, libexif, [
		AC_DEFINE(HAVE_LIBEXIF)
		CFLAGS="$CFLAGS $EXIF_CFLAGS"
		LIBS="$LIBS $EXIF_LIBS"
		],AC_MSG_WARN([EXIF functions will not be available]))

AC_ARG_ENABLE( debug, AC_HELP_STRING([--enable-debug],[Produce debugging information]), CFLAGS="$CFLAGS -g" )

AC_ARG_ENABLE( static, AC_HELP_STRING([--enable-static],[Enable static linking]), [
		LDFLAGS="$LDFLAGS -static"
		AC_DEFINE(STATIC)
]	)

AC_SUBST(CFLAGS)
AC_SUBST(LIBS)

AC_OUTPUT([
Makefile
src/Makefile
src/libtaglist/Makefile
src/libgfx/Makefile
src/resource.rc
gfxindex.spec
gfxindex.nsi
])
